# mini-transformer

./: .gitignore  CMakeLists.txt  README.md  run_demo.sh
app/: main.cpp
config/: engine-config.json
include/api/: api_server.hpp
include/engine/: engine.hpp
include/model/: advanced_transformer.hpp  attention.hpp  ffn.hpp  layernorm.hpp  tensor.hpp  transformer.hpp
include/secure/: secure.hpp
include/utils/: utils.hpp
models/: minigpt-char.json
src/api/: api_server.cpp
src/demo/: advanced_demo.cpp
src/engine/: engine.cpp
src/model/: attention.cpp  ffn.cpp  layernorm.cpp  transformer.cpp
src/secure/: secure.cpp
src/utils/: utils.cpp
web/: index.html  main.js  style.css
